--- a/Darkbet/src/Domain/Darkbet.Domain/Darkbet.Domain.csproj
+++ b/Darkbet/src/Domain/Darkbet.Domain/Darkbet.Domain.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Domain\Darkbet.Domain.Core\Darkbet.Domain.Core.csproj" />
+    <ProjectReference Include="..\Darkbet.Domain.Core\Darkbet.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
