--- a/Darkbet/src/Domain/Darkbet.Domain/Darkbet.Domain.csproj
+++ b/Darkbet/src/Domain/Darkbet.Domain/Darkbet.Domain.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Darkbet.Domain.Core\Darkbet.Domain.Core.csproj" />
   </ItemGroup>
 
