--- a/Darkbet/src/Services/Darkbet.Services.Api/Darkbet.Services.Api.csproj
+++ b/Darkbet/src/Services/Darkbet.Services.Api/Darkbet.Services.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
@@ -13,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Applciation\Darkbet.Application\Darkbet.Application.csproj" />
+    <ProjectReference Include="..\..\Infra\Darkbet.Infra.CrossCutting.IoC\Darkbet.Infra.CrossCutting.IoC.csproj" />
   </ItemGroup>
 
 </Project>
