--- a/Darkbet/src/Services/Darkbet.Services.Api/appsettings.json
+++ b/Darkbet/src/Services/Darkbet.Services.Api/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\paulo.campez\\Documents\\DarkBet.mdf;Integrated Security=True;Connect Timeout=30"
   },
-  "AllowedHosts": "*"
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  }
 }
